moving results dir up

--- a/2019_neurips_vigil/experiments.tex
+++ b/2019_neurips_vigil/experiments.tex
@@ -16,11 +16,11 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 \begin{figure}[htbp]
 	\centering
   \begin{subfigure}{\textwidth}
-    \includegraphics[width=0.92\textwidth]{results/samnet_cog_orig_canonical_no_labels.png}
+    \includegraphics[width=0.92\textwidth]{../results/samnet_cog_orig_canonical_no_labels.png}
   \end{subfigure}%
   \newline
   \begin{subfigure}{\textwidth}
-	\includegraphics[width=0.93\textwidth]{results/samnet_cog_orig_hard.png}
+	\includegraphics[width=0.93\textwidth]{../results/samnet_cog_orig_hard.png}
   \end{subfigure}%
 \caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the COG model (gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
 \label{fig:samnet_cog_detailed}
@@ -28,7 +28,7 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 
 \begin{wrapfigure}{r}{0.45\textwidth}
 	\centering
-	\includegraphics[width=0.45\textwidth]{results/samnet_cog_overall_transfer.png}
+	\includegraphics[width=0.45\textwidth]{../results/samnet_cog_overall_transfer.png}
 	\caption{Total accuracies of SAMNet (blue) and COG models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{wrapfigure}
