analysis of the results strategy - start

--- a/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
+++ b/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
@@ -124,11 +124,14 @@ the art baseline for hard tasks and in terms of generalization over video length
 \input{intro}
 \input{model}
 \input{experiments}
+\input{summary}
+
 \newpage
 \bibliographystyle{abbrv}
 \bibliography{../cog_bibliography}
-\newpage
-\input{appendix_model}
+
+%\newpage
+%\input{appendix_model}
 
 \section*{Acknowledgement}
 The authors would like to thank to the authors of COG paper (Igor Ganichev in particular) for sharing detailed results with the performances achieved by their COG baseline model.
