--- a/2019_neurips_kr2ml/experiments.tex
+++ b/2019_neurips_kr2ml/experiments.tex
@@ -10,7 +10,7 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 \begin{table}[htb]
 \caption{Details of the Canonical and Hard variants of the COG dataset}
 \centering
-\begin{tabular}{ccccccc}
+\begin{tabular}{lcccccc}
 	\toprule
 	Variant    &  	number &  	maximum & maximum & size & size & size  \\ 
 	& of   & memory & number of & of & of & of  \\
@@ -32,7 +32,7 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 %
 %On the other side we trained SAMNet using IBM's Mi-Prometheus~\cite{kornuta2018accelerating}, a framework for research based on Pytorch. We trained all our models using NVIDIA’s GeForce GTX TITAN X GPUs. We trained  SAMNet using 8 reasoning steps SAMCells and a hidden state size of 128. The external memory has 128-bit slots. We trained our model until convergence but we also have set a training time limit of 80 hours.
 
-\subsection{Performance comparison with COG baseline}
+\subsection{Performance comparison with the COG baseline}
 
 \begin{figure}[htbp]
 	\centering
@@ -47,12 +47,6 @@ The main differences are the number of frames in the input sequence (4 vs. 8) an
 \label{fig:samnet_cog_detailed}
 \end{figure}
 
-\begin{wrapfigure}{r}{0.45\textwidth}
-	\centering
-	\includegraphics[width=0.45\textwidth]{../results/samnet_cog_overall_transfer.png}
-	\caption{Total accuracies of SAMNet (blue) and COG models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
-	\label{fig:samnet_cog_overall_transfer}
-\end{wrapfigure}
 
 In our experiments, we have focused on 22 classification tasks and compared our results with the baseline model, as presented in \cref{fig:samnet_cog_detailed}.
 For the Canonical variant (top row), we have achieved similar accuracies for the majority of tasks (with the total average accuracy of 98.0\% in comparison of 97.6\% achieved by the COG model), with significant improvements (around 13 points) for \textit{AndCompare} tasks.
@@ -60,6 +54,63 @@ As those tasks focus on compositional questions referring to two objects, we hyp
 Despite there are some tasks in which our model reached slightly lower accuracies,
 % (between 0.2 and 1.8 points)
 when comparing performances on the Hard variant, it dominates COG baseline on all tasks, with improvements varying from 0.5 to more than 30 points.
+
+\begin{table}[htb]
+\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~
+	while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}}
+\centering
+\begin{adjustbox}{width=\textwidth}
+\begin{tabular}{lcccccccccc}
+	\toprule
+	Model & & SAMNet & && && COG&& \\
+	\cmidrule{2-5} \cmidrule{7-11} 
+	&&&&& & paper & ours & ours & paper&\\
+	\cmidrule{7-9} \cmidrule{10-11}
+	Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
+	Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
+	Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
+	\midrule
+	
+	Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
+	
+	\midrule 
+			
+	AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
+	AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
+	AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
+	AndSimpleCompareShape		&	99.2	&	85.8	&	97.6	&	99.2	&	&	100.0	&	56.7	&	79.3	&	77.9 \\
+	CompareColor			&	98.1	&	89.3	&	95.9	&	99.7	&	&	99.2	&	56.1	&	67.9	&	50.1 \\
+	CompareShape			&	98.0	&	89.7	&	95.9	&	99.2	&	&	99.4	&	66.8	&	65.4	&	50.5	 \\
+	Exist				&	100.0	&	99.7	&	99.8	&	99.8	&	&	100.0	&	63.5	&	96.1	&	99.3 \\
+	ExistColor			&	100.0	&	99.6	&	99.9	&	99.9	&	&	99.0	&	70.9	&	99	&	89.8 \\
+	ExistColorOf			&	99.9	&	95.5	&	99.7	&	99.8	&	&	99.7	&	51.5	&	76.1	&	73.1 \\
+	ExistColorSpace			&	94.1	&	88.8	&	91.0	&	90.8	&	&	98.9	&	72.8	&	77.3	&	89.2 \\
+	ExistLastColorSameShape		&	99.5	&	99.4	&	99.4	&	98.0	&	&	100.0	&	65.0	&	62.5	&	50.4 \\
+	ExistLastObjectSameObject	&	97.3	&	97.5	&	97.7	&	97.5	&	&	98.0	&	77.5	&	61.7	&	60.2 \\
+	ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
+	ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
+	ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
+	ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
+	ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
+	GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
+	GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
+	GetShape			&	100.0	&	97.3	&	99.9	&	99.9	&	&	100.0	&	83.5	&	89.2	&	97.1	 \\
+	GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
+	SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
+	SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
+	\bottomrule
+\end{tabular}
+\end{adjustbox}
+\label{results}
+\end{table}
+
+
+\begin{wrapfigure}{r}{0.45\textwidth}
+	\centering
+	\includegraphics[width=0.45\textwidth]{../results/samnet_cog_overall_transfer.png}
+	\caption{Total accuracies of SAMNet (blue) and COG models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
+	\label{fig:samnet_cog_overall_transfer}
+\end{wrapfigure}
 
 The goal of the next set of experiments was to test the generalization ability concerning the sequence length and number of distractors.
 For that purpose, we have compared the accuracies of both models when trained on the Canonical variant and tested on Hard (\cref{fig:samnet_cog_overall_transfer}).
@@ -77,5 +128,70 @@ In summary, the results clearly indicate that the mechanisms introduced in SAMNe
 
 
 
+\subsection{Analysis of the reasoning strategy}
 
+We illustrate the key reasoning steps taken by the model with the following example.
+Let the question be: ``Does color of u now equal the color of the latest circle?''
+and let the frames be as shown in~\cref{fig:frame-seq}.
+The answer is true in the last frame because the latest circle can be found in Frame 2. 
+\begin{figure}[!h]
+\begin{minipage}{0.25\textwidth}
+\centering
+\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 1"}
+\label{fig:frame-1}
+\end{minipage}\hfill
+\begin{minipage}{0.25\textwidth}
+	\centering
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 2"}
+	\label{fig:frame-1}
+\end{minipage}\hfill
+\begin{minipage}{0.25\textwidth}
+	\centering
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 3"}
+	\label{fig:frame-1}
+\end{minipage}\hfill
+\begin{minipage}{0.25\textwidth}
+	\centering
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 4"}
+		\label{fig:frame-1}
+\end{minipage}
+\caption{Sample sequence of input frames} 
+\label{fig:frame-seq}
+\end{figure}
+
+SAMNet gives the correct answer for this example and we can interpret its reasoning process via a movie that we can generate.
+The key steps in that reasoning process are shown below. Working backwards, the following shows what happens in the key steps
+of the reasoning process.
+In Step 1 of processing Frame 4 (see~\cref{fig:frame-4-step-1}), we see that the object representing the letter u is where the attention 
+is, both in text and in image. We also see that the temporal classifier gives the highest weight to the context ``now''.
+\begin{figure}[!h]
+\centering
+  \includegraphics[width=\textwidth]{"../img/visualization/sample 2/Frame 4 Step 1"}
+\caption{State of SAMNet in a particular reasoning step} 
+\label{fig:frame-4-step-1}
+\end{figure}
+
+Now there is no circle in this frame even though it is a valid candidate . This is detected by SAMNet,
+as shown in~\cref{fig:frame-4-step-6}. Even though the textual attention is on the right word
+and the temporal classification is ``latest'', there
+is no valid visual attention.
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=\textwidth]{"../img/visualization/sample 2/Frame 4 Step 6"}
+	\caption{State of SAMNet in a particular reasoning step} 
+	\label{fig:frame-4-step-6}
+\end{figure}
+
+But in Step 6 of processing Frame 2 (see~\cref{fig:frame-2-step-6}), 
+we see that the object representing the circle is where the attention is.
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=\textwidth]{"../img/visualization/sample 2/Frame 2 Step 6"}
+	\caption{State of SAMNet in a particular reasoning step} 
+	\label{fig:frame-2-step-6}
+\end{figure}
+Moreover, the ``Add New`` gate value is high enough that the valid object representing
+the visual encoding of the circle is stored in memory. Note that this is not perfect:
+this value should have been close to 1 but the model is still able to use it for 
+correct prediction.
 
