--- a/2019_neurips_kr2ml/model.tex
+++ b/2019_neurips_kr2ml/model.tex
@@ -127,4 +127,4 @@ Note that $ro_t$ is allowed to be a null object (i.e. 0 vector) in case neither 
 Finally, $so_t$ is the output of a simple linear layer whose inputs are $ro_t$ and the previous summary object $so_{t-1}$.
 This serves to retain additional information that was in $so_{t-1}$, e.g., if it held the partial result of a complex query with Boolean connectives.
 
-For details of the modules not covered here, please see the appendix.
+%For details of the modules not covered here, please see the appendix.
