work on experiments, changed figure placement

--- a/2019_neurips_kr2ml/experiments.tex
+++ b/2019_neurips_kr2ml/experiments.tex
@@ -109,6 +109,8 @@ when comparing performances on the Hard variant, it dominates COG baseline on al
 \end{table}
 
 
+\subsection{Generalization capabilities}
+
 \begin{wrapfigure}{r}{0.5\textwidth}
 	\centering
 	\includegraphics[width=0.5\textwidth]{../results/samnet_cog_overall_transfer.png}
