--- a/2019_neurips_kr2ml/model.tex
+++ b/2019_neurips_kr2ml/model.tex
@@ -18,19 +18,12 @@
 %The model is also composed of an Image Encoder and a Question Encoder both responsible to pre-process the visual and textual inputs. The output unit is a classifier.
 %All those modules are described below.
 
-\begin{figure}[htbp]
+\begin{figure}[b!]
 	\centering
 	\includegraphics[width=\textwidth]{../img/architecture/samnet_architecture4}
 	\caption{General architecture of SAMNet}
 	\label{fig:samnet}
 \end{figure}
-
-%\begin{figure}[hbtp]
-%	\centering
-%	\includegraphics[width=0.7\textwidth]{../img/architecture/samnet_architecture4}
-%	\caption{General architecture of SAMNet}
-%	\label{fig:samnet}
-%\end{figure}	
 
 SAM Network (SAMNet for short) is an end-to-end differentiable recurrent model equipped with an external memory~(\cref{fig:samnet}).
 The model makes a single pass over the frames in temporal order, accessing one frame at a time.
@@ -39,23 +32,16 @@ Each location of the memory stores a $d$-dimensional vector. %, where $d$ is a g
 The memory can be accessed through either content-based addressing, via dot-product attention, or location-based addressing. 
 Using gating mechanisms, correct objects can be retrieved 
 in order to perform multi-step spatio-temporal reasoning over text and video.  
-%A notable feature of this design is that the number of addresses $N$ can be set to different values during training and 
-%testing to fit the characteristics of data.
+A notable feature of this design is that the number of addresses $N$ can be set to different values during training and testing to fit the characteristics of data.
 
 
-\begin{figure}[htbp]
+\begin{figure}[t!]
 	\centering
 	\includegraphics[width=\textwidth]{../img/architecture/samcell_reasoning}
 	\caption{Unfolded reasoning steps with operations performed by the SAMCell}
 	\label{fig:samcell}
 \end{figure}
 
-%\begin{figure}[hbtp]
-%	\centering
-%	\includegraphics[width=0.7\textwidth]{../img/architecture/samcell_reasoning}
-%	\caption{Single reasoning step in SAMCell}
-%	\label{fig:samcell}
-%\end{figure}	
 
 The core of SAMNet is a recurrent cell called a SAM Cell (\cref{fig:samcell}). 
 Unrolling a new series of $T$ cells for every frame enables $T$ steps of compositional
