--- a/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
+++ b/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
@@ -114,26 +114,18 @@ Visual reasoning in videos requires understanding temporal concepts in addition 
 In analogy with human reasoning, we present Selective Attention Memory Network (SAMNet), an end-to-end differentiable recurrent 
 model equipped with external memory.  
 SAMNet can perform multi-step reasoning on a frame-by-frame basis, and dynamically control information flow to the memory 
-to store context-relevant representations and from the memory to answer questions. 
-We tested our model on the COG dataset (a multi-frame visual question answering test).
-We compare our model to the original COG model and show that SAMNet outperforms the original COG basline model especially on the hardest version of the dataset with longer sequences and a maximum number of distractors.
-We also demonstrate that our model has extraordinary generalization capabilities going from easy to hard tasks, without and with additional fine-tuning.
-%, and outperformed the state of the art baseline for hard tasks and in terms of generalization over video length and scene complexity.
+to store context-relevant representations to answer questions. 
+We tested our model on the COG dataset (a multi-frame visual question answering test), and outperformed the state of 
+the art baseline for hard tasks and in terms of generalization over video length and scene complexity.
 %	We introduce the Selective Attention Memory Network (SAMNet), a end-to-end differentiable architecture for video reasoning. It is a recurrent model with an external memory that enables frame by frame reasoning over text and video. 
-%		We show SAMNet's abilities on the COG dataset made for Video Question Answering (Guangyu Robert Yang, Igor Ganichev et al., ECCV 2018). 
+%		We show SAMNet's abilities on the COG dataset made for Video Question Answering (Guangyu Robert Yang, Igor Ganichev et al., ECCV 2018). We compare our model to the original COG model and show that SAMNet outperforms the COG model especially on the hardest version of the dataset with longer sequences and a maximum number of distractors. We also demonstrate that our model has good generalization capabilities going from easy to hard tasks.
 \end{abstract}
 
 \input{intro}
-
 \input{model}
-
 \input{experiments}
-
 \input{summary}
 
-\section*{Acknowledgement}
-The authors would like to thank to the authors of COG paper (Igor Ganichev in particular) for sharing the detailed performances achieved by their COG baseline model.
-	
 \newpage
 \bibliographystyle{abbrv}
 \bibliography{../cog_bibliography}
@@ -141,4 +133,7 @@ The authors would like to thank to the authors of COG paper (Igor Ganichev in pa
 %\newpage
 %\input{appendix_model}
 
+\section*{Acknowledgement}
+The authors would like to thank to the authors of COG paper (Igor Ganichev in particular) for sharing detailed results with the performances achieved by their COG baseline model.
+	
 \end{document}
