--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -248,4 +248,29 @@
   publisher = {IEEE},
 }
 
+@article{taniguchi2018symbol,
+  title={Symbol emergence in cognitive developmental systems: a survey},
+  author={Taniguchi, Tadahiro and Ugur, Emre and Hoffmann, Matej and Jamone, Lorenzo and Nagai, Takayuki and Rosman, Benjamin and Matsuka, Toshihiko and Iwahashi, Naoto and Oztop, Erhan and Piater, Justus and others},
+  journal={IEEE Transactions on Cognitive and Developmental Systems},
+  year={2018},
+  publisher={IEEE}
+}
+
+@misc{mao2019neurosymbolic,
+    title={The Neuro-Symbolic Concept Learner: Interpreting Scenes, Words, and Sentences From Natural Supervision},
+    author={Jiayuan Mao and Chuang Gan and Pushmeet Kohli and Joshua B. Tenenbaum and Jiajun Wu},
+    year={2019},
+    eprint={1904.12584},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
+
+@article{vedantam2019probabilistic,
+  title={Probabilistic Neural-symbolic Models for Interpretable Visual Question Answering},
+  author={Vedantam, Ramakrishna and Desai, Karan and Lee, Stefan and Rohrbach, Marcus and Batra, Dhruv and Parikh, Devi},
+  journal={arXiv preprint arXiv:1902.07864},
+  year={2019}
+}
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
